# 1brc

./: .clang-format  .gitignore  1brc.cpp  CMakeLists.txt  README.md  bench.cpp  profile.sh
include/: 00-baseline.h  01-parse_float.h  02-parse_int.h  03-parse_branchless.h  03-parse_temp_branchless.h  04-parse_line_branchless.h  05-custom_map.h  06-mmapio.h  07-threading.h  08-chunking.h  09-perfect_hash.h  baseline.h  diskread.h  floatparsing.h  intparsing.h  latest.h
profiles/: .callgrind.out  BASELINE_1E5.callgrind.out  CUSTOM_MAP_1E5.callgrind.out  DISKREAD_1E5.callgrind.out  PARSE_FLOAT_1E5.callgrind.out  PARSE_INT_1E5.callgrind.out  PARSE_LINE_BRANCHLESS_1E5.callgrind.out  PARSE_TEMP_BRANCHLESS_1E5.callgrind.out
src/: 00-baseline.cpp  01-parse_float.cpp  02-parse_int.cpp  03-parse_branchless.cpp  03-parse_temp_branchless.cpp  04-parse_line_branchless.cpp  05-custom_map.cpp  06-mmapio.cpp  07-threading.cpp  08-chunking.cpp  09-perfect_hash.cpp  baseline.cpp  diskread.cpp  floatparsing.cpp  intparsing.cpp  latest.cpp
